# Linux_IIC_OLED_SSD1306

./: CMakeLists.txt  README.md
COMMON/inc/: ename.c.inc  error_functions.h  get_num.h  mycommon.h  tlpi_hdr.h
COMMON/src/: alt_functions.c  error_functions.c  get_num.c
HARDWARE/inc/: bmp.h  gpio.h  gps.h  mytcp.h  oled.h  oledfont.h  uart.h
HARDWARE/src/: gpio.c  gps.c  mytcp.c  oled.c  uart.c
LIB/inc/: myi2c-dev.h  myi2c.h
LIB/src/: myi2c.c
USER/: main.c
